Fixed alignment issue with nametag

--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ nav #tag {
     background-color: white;
     color: #101217;
 
-    padding-top: 15px;
+    padding-top: 30px;
     overflow: hidden;
 }
 
